# homework

./: README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: .flake8  README.md  decorators.py  external_api.py  generators.py  masks.py  processing.py  pyproject.toml  utils.py  widget.py
test/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
