[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Konstantin Bernik <bernik.konstantin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
utils = "^1.0.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
line-length = 119

exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''